# Dream-Diary

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/fonts/: FONT-SOURCES.md
src/components/: BookScene.tsx  DateRail.tsx  DiaryEditor.tsx  HighlightText.tsx  SearchPanel.tsx  UnlockScreen.tsx
src/hooks/: useJournalApp.ts
src/lib/: bridge.ts  date.ts  journalMeta.ts
src/state/: types.ts
src/styles/: app.css  reset.css  theme.css
